[package]
name = "boltz-bolt12"
version = "0.1.3"
authors = ["Boltz <hi@bol.tz>"]
edition = "2018"
license = "MIT"
description = "Parse BOLT12 offers"
repository = "https://github.com/BoltzExchange/bolt12-wasm.git"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bech32 = { version = "0.9.1", default-features = false }
lightning = { version = "0.0.125", features = ["no-std"], default-features = false }
wasm-bindgen = "0.2.95"

[dev-dependencies]
hex = "0.4.3"
wasm-bindgen-test = "0.3.45"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
